fix cart issues, add pagination

--- a/src/main/webapp/resources/css/admin-style.css
+++ b/src/main/webapp/resources/css/admin-style.css
@@ -46,6 +46,10 @@ a:focus {
     margin: 40px 0;
 }
 
+.failed{
+	color:red;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
